plugins {
    id 'java'
    id 'application'
    id "org.sonarqube" version "7.1.0.6387"
}

sonar {
    properties {
        // SonarQube가 알려준 키값 그대로 입력
        property "sonar.projectKey", "Invaders-SDP-C-only_Invaders-SDP-23292-Csonly"
        property "sonar.organization", "invaders-sdp-c-only"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
}

application {
    mainClass = 'engine.Core'
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['res']
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

jar {
    manifest {
        attributes 'Main-Class': 'engine.Core'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
    jvmArgs = [
        '-XX:+EnableDynamicAgentLoading',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED'
    ]
}
